--- a/readme
+++ b/readme
@@ -20,23 +20,30 @@ The solution integrates **three specialized agriculture LLMs**, **real-time sate
 ## 🏗️ Proposed Implementation  
 
 ### 1. System Architecture  
-[Images/system_architecture.png]
+![System Architecture](Images/system_architecture.png)  
+
 AgroBot follows a **multi-agent workflow** with four components:  
 - **Knowledge Ingestion Pipeline**  
 - **Query Processing Workflow**  
 - **Satellite Integration**  
 - **Streamlit UI Implementation**  
 
+---
+
 ### Knowledge Ingestion Pipeline  
-- Data from: AP/Telangana portals, ANGRU publications, PM-KISAN docs, pest databases  
-- Preprocessing: Chunking (256 tokens), metadata tagging, OCR for scanned Telugu docs  
-- Embedding: `jina-embeddings-v2-te-en` for Telugu-English retrieval  
-- Indexing: FAISS with metadata filtering (120ms latency)  
+- **Data Sources:** AP/Telangana portals, ANGRU publications, PM-KISAN docs, pest databases  
+- **Preprocessing:** Chunking (256 tokens), metadata tagging, OCR for scanned Telugu docs  
+- **Embedding:** `jina-embeddings-v2-te-en` for Telugu-English retrieval  
+- **Indexing:** FAISS with metadata filtering (120ms latency)  
+
+---
 
 ### Query Processing Workflow  
 1. Language detection (character-level Telugu recognition)  
 2. Context classification (Llama 3.1 router)  
 3. Specialist model selection with environmental context  
+
+---
 
 ### Satellite Integration (via Google Earth Engine)  
 - **NDVI (MODIS/061/MOD13Q1):** Crop health  
@@ -44,8 +51,11 @@ AgroBot follows a **multi-agent workflow** with four components:
 - **Land Temp (ECCO/ERA5):** Pest outbreak prediction  
 - **Precipitation (ECMWF/ERA5):** Water management  
 
+---
+
 ### Streamlit UI  
-[Images/Streamlit_UI_Capital.png]
+![Streamlit UI](Images/Streamlit_UI_Capital.png)  
+
 - Telugu UI (Noto Sans Telugu)  
 - Location-aware interface  
 - Voice input (Web Speech API)  
@@ -59,15 +69,21 @@ AgroBot follows a **multi-agent workflow** with four components:
 - **ASB (Dhenu2-Llama3):** Trained on ICAR crop calendars → 29% pest ID improvement  
 - **ASC (AgriParam):** Soil health analytics → 45% dosage error reduction  
 
+---
+
 ### Hybrid Retrieval System  
 1. Semantic search (FAISS)  
 2. Keyword boosting for Telugu terms  
 3. Location-based filtering  
 
+---
+
 ### Latency Optimization  
 - **4-bit Quantization:** 70B → 4.3GB VRAM  
 - **Caching strategy**  
 - **Model cascading**  
+
+---
 
 ### Safety Guardrails  
 - Dosage validation  
@@ -79,7 +95,7 @@ AgroBot follows a **multi-agent workflow** with four components:
 ## 🚧 Limitations & Issues  
 - **Language challenges:** code-mixing, dialect variance, transliteration errors  
 - **Model constraints:** hallucinations, satellite data latency, limited Telugu docs  
-- **Infrastructure:** 11s load time on 2G, no offline mode, GPU dependency  
+- **Infrastructure challenges:** 11s load time on 2G, no offline mode, GPU dependency  
 
 ---
 
@@ -107,14 +123,14 @@ AgroBot follows a **multi-agent workflow** with four components:
 - **Multi-LLM Architecture:** dynamic context switching, critic consensus, contextual chaining  
 - **Vernacular-Centric Design:**  
   - Hybrid embeddings (`jina-embeddings-v2-te-en`) → 22% better Telugu NER  
-  - Transliteration engine (Romanized → native)  
+  - Transliteration engine (Romanized → native script)  
   - Custom agricultural vocabulary  
 
 ---
 
 ## ✅ Conclusion  
 Rythumitra is a **paradigm shift in agricultural advisory**:  
-- 83% accuracy with context-aware multi-LLM  
+- 88% accuracy with context-aware multi-LLM  
 - Serving **100M+ Telugu speakers**  
 - Real-time **satellite grounding**  
 - Safety-first, reducing harmful advice by 72%  
